enf appeal form updates

--- a/app/views/appeal/enforcement/v4/prepare-appeal/facts-a.html
+++ b/app/views/appeal/enforcement/v4/prepare-appeal/facts-a.html
@@ -7,7 +7,7 @@
   </span>
 
   <h1 class="govuk-heading-l">
-    Facts for Ground (a)
+    Facts for ground (a)
   </h1>
 
   <p class="govuk-body">
@@ -24,7 +24,7 @@
     value: data["ground-a-reasons"] | e,
     rows: 10,
     label: {
-      html: "Facts for Ground (a)",
+      html: "Facts for ground (a)",
       classes: "govuk-label--m"
     }
   }) }}
