--- a/app/views/appeal/enforcement/v4/prepare-appeal/facts-b.html
+++ b/app/views/appeal/enforcement/v4/prepare-appeal/facts-b.html
@@ -7,7 +7,7 @@
   </span>
 
   <h1 class="govuk-heading-l">
-    Facts for Ground (b)
+    Facts for ground (b)
   </h1>
 
   <p class="govuk-body">
@@ -24,7 +24,7 @@
     value: data["ground-b-reasons"] | e,
     rows: 10,
     label: {
-      html: "Facts for Ground (b)",
+      html: "Facts for ground (b)",
       classes: "govuk-label--m"
     }
   }) }}
