--- a/app/views/appeal/enforcement/v4/task-list__grounds.html
+++ b/app/views/appeal/enforcement/v4/task-list__grounds.html
@@ -57,7 +57,7 @@
     },
 
       {
-        key: { text: "Did anyone submit a planning application for the development on the enforcement notice and pay the correct fee?" },
+        key: { text: "Did anyone submit a retrospective planning application?" },
         value:
           { html: data['fee-check'] or 'No' }
           if data['fee-check-complete'] else
@@ -70,21 +70,6 @@
           ]
         }
       } if data['grounds'] and 'groundA' in data['grounds'],
-
-      {
-        key: { text: "Application fee receipt" },
-        value:
-          { html: data['fee-receipt'] or '<a href="#">receipt.pdf</a>' }
-          if data['fee-receipt-complete'] else
-          { html: '<span class="govuk-hint">Not started</span>' },
-        actions: {
-          items: [
-            { href: 'prepare-appeal/fee-upload?cya=true', html: 'Change' }
-            if data['fee-receipt-complete'] else
-            { href: 'prepare-appeal/fee-upload', html: 'Answer' }
-          ]
-        }
-      } if data['fee-check'] == 'Yes',
 
       {
         key: { text: "Was the application for all or part of the development?" },
@@ -117,7 +102,7 @@
       } if data['grounds'] and 'groundA' in data['grounds'],
 
       {
-        key: { text: "Application date" },
+        key: { text: "What date did you submit your application?" },
         value:
           { html: '20 November 2025' }
           if data['application-date-complete'] else
@@ -149,7 +134,7 @@
       {
         key: { text: "Did the local planning authority change the description of development?" },
         value:
-        { html: data['application-desc-changed'] or 'This is my description...' }
+        { html: data['application-desc-changed'] or 'No' }
         if data['application-desc-changed-complete'] else
           { html: '<span class="govuk-hint">Not started</span>' },
         actions: {
@@ -189,7 +174,8 @@
             { href: 'prepare-appeal/decision-letter-date', html: 'Answer' }
           ]
         }
-      } if data['granted-or-refused'] == 'Granted with conditions' or data['granted-or-refused'] == 'Refused',
+      } if data['granted-or-refused-complete']
+      and data['granted-or-refused'] != 'I have not received a decision',
 
       {
         key: { text: "Did you appeal the decision?" },
@@ -204,7 +190,8 @@
             { href: 'prepare-appeal/appeal-decision', html: 'Answer' }
           ]
         }
-      } if data['granted-or-refused'] == 'Granted with conditions' or data['granted-or-refused'] == 'Refused',
+      } if data['granted-or-refused-complete']
+      and data['granted-or-refused'] != 'I have not received a decision',
 
       {
         key: { text: "When did you receive an appeal decision?" },
@@ -220,6 +207,36 @@
           ]
         }
       } if data['appeal-decision'] == 'Yes',
+
+      {
+        key: { text: "Did you pay the ground (a) fee?" },
+        value:
+          { html: data['ground-a-fee-check'] or 'No' }
+          if data['ground-a-fee-check-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'prepare-appeal/ground-a-fee-check?cya=true', html: 'Change' }
+            if data['ground-a-fee-check-complete'] else
+            { href: 'prepare-appeal/ground-a-fee-check', html: 'Answer' }
+          ]
+        }
+      } if data['grounds'] and 'groundA' in data['grounds'],
+
+      {
+        key: { text: "Ground (a) fee receipt" },
+        value:
+          { html: '<a href="#">ground-a-fee-receipt.pdf</a>' }
+          if data['ground-a-fee-check-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'prepare-appeal/ground-a-fee-receipt?cya=true', html: 'Change' }
+            if data['ground-a-fee-receipt-complete'] else
+            { href: 'prepare-appeal/ground-a-fee-receipt', html: 'Answer' }
+          ]
+        }
+      } if data['ground-a-fee-check'] == 'Yes',
 
       {
         key: { text: "What date was the decision due?" },
