--- a/app/views/appeal/enforcement/v4/prepare-appeal/ground-a-fee-check.html
+++ b/app/views/appeal/enforcement/v4/prepare-appeal/ground-a-fee-check.html
@@ -1,12 +1,11 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Did anyone submit a retrospective planning application?' %}
+{% set title = 'Did you pay the ground (a) fee?' %}
 
 {% block questions %}
-
   {{ govukRadios({
-    idPrefix: 'fee-check',
-    name: 'fee-check',
+    idPrefix: 'ground-a-fee-check',
+    name: 'ground-a-fee-check',
     fieldset: {
       legend: {
         html: title,
@@ -18,12 +17,12 @@
       {
         html: 'Yes',
         value: 'Yes',
-        checked: checked('fee-check','Yes')
+        checked: checked('ground-a-fee-check','Yes')
       },
       {
         html: 'No',
         value: 'No',
-        checked: checked('fee-check','No')
+        checked: checked('ground-a-fee-check','No')
       }
     ]
   }) }}
