--- a/app/views/appeal/enforcement/v4/task-list__grounds.html
+++ b/app/views/appeal/enforcement/v4/task-list__grounds.html
@@ -117,7 +117,7 @@
       } if data['grounds'] and 'groundA' in data['grounds'],
 
       {
-        key: { text: "Description of development" },
+        key: { text: "Enter the description of development" },
         value:
         { html: data['description-detail'] or 'This is my description...' }
         if data['description-detail-complete'] else
