enf company name bug fix

--- a/app/views/appeal/enforcement-listed-building-2025/index.html
+++ b/app/views/appeal/enforcement-listed-building-2025/index.html
@@ -36,8 +36,8 @@ href: '/#appeal'
     <h2 class="govuk-heading-m">
       Latest version
       {{govukTag({
-          text: "In progress",
-          classes: "govuk-!-margin-left-2 govuk-tag--blue"
+          text: "Ready for review",
+          classes: "govuk-!-margin-left-2 govuk-tag--light-blue"
       })}}
     </h2>
 
