--- a/app/views/appeal/enforcement/v4/prepare-appeal/appellant-check.html
+++ b/app/views/appeal/enforcement/v4/prepare-appeal/appellant-check.html
@@ -23,7 +23,7 @@
       {
         html: 'A group of individuals',
         hint: {
-          text: "If at least 2 people are named on the enforcement notice."
+          text: "If at least 2 people are appealing the enforcement notice."
         },
         value: 'Joint application',
         checked: checked('appellant-check','Joint application')
