--- a/app/assets/sass/components/_header.scss
+++ b/app/assets/sass/components/_header.scss
@@ -9,6 +9,7 @@ $department-color: govuk-colour("turquoise");
 	white-space: nowrap;
 	width: auto;
 	margin-bottom: 5px;
+	padding-top: 1rem;
 
 	.govuk-header__logotype-text {
 		font-size: 24px;
@@ -61,12 +62,12 @@ $department-color: govuk-colour("turquoise");
 // }
 
 .app-c-header__product-name {
-	position: absolute;
-	top: 24px;
-	left: 53px;
+	position: relative;
+	top: -10px;
+	left: 0;
 
 	@include govuk-media-query($from: tablet) {
-		position: initial;
+		position: relative;
 		display: inline-block;
 		margin-top: 3px;
 
@@ -90,6 +91,9 @@ $department-color: govuk-colour("turquoise");
 	}
 }
 
+.app-c-header__nav {
+	padding-top: 0.6rem;
+}
 
 // The crown styles were removed as GOV.UK was added to the SVG, add them back in
 .govuk-header__logotype-crown {
