additional appelants copy for enf

--- a/app/views/appeal/enforcement-listed-building-2025/v1/prepare-appeal/agent-check-joint-application.html
+++ b/app/views/appeal/enforcement-listed-building-2025/v1/prepare-appeal/agent-check-joint-application.html
@@ -29,7 +29,7 @@
         divider: "or"
       },
       {
-        html: 'I am appealing on behalf of the group of individuals',
+        html: 'I am appealing on behalf of the additional appellants',
         value: 'other',
         checked: checked('agent-check-joint-application','other')
       }
