--- a/app/views/appeal/enforcement-listed-building-2025/v1/prepare-appeal/appellant-check.html
+++ b/app/views/appeal/enforcement-listed-building-2025/v1/prepare-appeal/appellant-check.html
@@ -21,12 +21,12 @@
         checked: checked('appellant-check','A person')
       },
       {
-        html: 'A group of individuals',
+        html: 'Additional appellants',
         hint: {
-          text: "If at least 2 people are appealing the enforcement notice."
+          text: "You are submitting an appeal by more than one person, against the same enforcement notice."
         },
-        value: 'Joint application',
-        checked: checked('appellant-check','Joint application')
+        value: 'Additional appellants',
+        checked: checked('appellant-check','Additional appellants')
       },
       {
         html: "An organisation",
