--- a/app/views/appeal/enforcement/v4/task-list__contact.html
+++ b/app/views/appeal/enforcement/v4/task-list__contact.html
@@ -115,7 +115,7 @@
             { href: 'prepare-appeal/appellant-names', html: 'Answer' }
           ]
         }
-      } if data['appellant-check'] == 'Joint application',
+      } if data['appellant-check'] == 'Additional appellants',
 
 
       {
@@ -131,7 +131,7 @@
             { href: 'prepare-appeal/agent-check-joint-application', html: 'Answer' }
           ]
         }
-      } if data['appellant-check'] == 'Joint application',
+      } if data['appellant-check'] == 'Additional appellants',
 
       {
         key: { text: "What is the name of the organisation?" },
