--- a/app/views/appeal/enforcement/index.html
+++ b/app/views/appeal/enforcement/index.html
@@ -36,8 +36,8 @@ href: '/#appeal'
     <h2 class="govuk-heading-m">
       Version 5 (latest)
       {{govukTag({
-          text: "In progress",
-          classes: "govuk-!-margin-left-2 govuk-tag"
+          text: "Ready for review",
+          classes: "govuk-!-margin-left-2 govuk-tag--light-blue"
       })}}
     </h2>
 
