--- a/app/views/appeal/enforcement/index.html
+++ b/app/views/appeal/enforcement/index.html
@@ -36,8 +36,8 @@ href: '/#appeal'
     <h2 class="govuk-heading-m">
       Version 5 (latest)
       {{govukTag({
-          text: "Ready for review",
-          classes: "govuk-!-margin-left-2 govuk-tag--light-blue"
+          text: "In progress",
+          classes: "govuk-!-margin-left-2 govuk-tag"
       })}}
     </h2>
 
@@ -60,6 +60,8 @@ href: '/#appeal'
         Updates to flow for when ground (a) is selected, the user will always be asked if they have paid the ground (a) fee
       </li>
     </ul>
+
+    <p class="govuk-body"><strong>Note: </strong>Awaiting confirmation on whether we ask the user for their appeal decision details or for their appeal reference number.</p>
 
     <h2 class="govuk-heading-m">
       Version 4
