dashboard UI testing

--- a/app/views/manage/appeals/search/filters-side/side-selected.html
+++ b/app/views/manage/appeals/search/filters-side/side-selected.html
@@ -271,6 +271,14 @@
                                                             Withdrawn
                                                         </label>
                                                     </div>
+                                                    <div class="govuk-checkboxes__item">
+                                                        <input class="govuk-checkboxes__input" id="type-2" name="type"
+                                                            type="checkbox"
+                                                            value="Outline planning permission with some matters reserved">
+                                                        <label class="govuk-label govuk-checkboxes__label" for="type-2">
+                                                            Invalid
+                                                        </label>
+                                                    </div>
 
                                                 </div>
                                             </fieldset>
