--- a/app/views/manage/appeals/search/v2/active.html
+++ b/app/views/manage/appeals/search/v2/active.html
@@ -18,7 +18,7 @@
 
         <h3 class="govuk-heading-m govuk-!-margin-top-0">Search</h3>
         <div id="event-name-hint" class="govuk-hint">
-            You can search by appeal reference, planning application reference or first line of address
+            You can search by appeal, planning application or enforcement notice reference, or address
         </div>
 
         <form class="govuk-form-group" style="display: flex; gap: 8px; align-items: center; margin-bottom: 0px;"
@@ -86,7 +86,7 @@
                               </strong>
                         </th>
                         <td class="govuk-table__cell">Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT</td>
-                        <td class="govuk-table__cell">Full planning</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell">29 September 2025</td>
                         <td class="govuk-table__cell">3 days</td>
                           <td class="govuk-table__cell"><a href="#">Questionnaire</a></td>
@@ -129,7 +129,7 @@
                               </strong>
                         </th>
                         <td class="govuk-table__cell">7 Willowmere Crescent, Oakley Marsh, Kent, ZZ2 2TZ</td>
-                        <td class="govuk-table__cell">Full planning</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell">29 September 2025</td>
                         <td class="govuk-table__cell">3 days</td>
                           <td class="govuk-table__cell"><a href="#">Statement</a><br></td>
@@ -175,7 +175,7 @@
                             </a>
                         </th>
                         <td class="govuk-table__cell">Suite 5, 101 Harbourview Buildings, Greenhaven, Cornwall AW3 582</td>
-                        <td class="govuk-table__cell">Full planning</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell">29 September 2025</td>
                         <td class="govuk-table__cell">3 days</td>
                           <td class="govuk-table__cell"><a href="#">Statement</a><br></td>
@@ -215,7 +215,7 @@
                             </a>
                         </th>
                         <td class="govuk-table__cell">Rose Cottage, Farrow Lane, Ashfield Cross, Gloucestershire, CB23 792</td>
-                        <td class="govuk-table__cell">Full planning</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell">29 September 2025</td>
                         <td class="govuk-table__cell">3 days</td>
                           <td class="govuk-table__cell"><a href="#">Questionnaire</a></td>
@@ -261,7 +261,7 @@
                               </strong>
                         </th>
                         <td class="govuk-table__cell">The Old Watchtower, Cliffside Road, Marlowe Point, Hampshire, CB23 7UA</td>
-                        <td class="govuk-table__cell">Full planning</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell">29 September 2025</td>
                         <td class="govuk-table__cell">1 day</td>
                           <td class="govuk-table__cell"><a href="#">Statement</a></td>
