--- a/app/views/manage/appeals/search/v2/decided.html
+++ b/app/views/manage/appeals/search/v2/decided.html
@@ -85,7 +85,7 @@
                         </th>
                         <td class="govuk-table__cell">92 Papaw Road, London, WD6 9QW</td>
                         <td class="govuk-table__cell">28 September 2025</td>
-                        <td class="govuk-table__cell">Planning</td>
+                        <td class="govuk-table__cell">lanning</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
                             Invalid
                           </strong></td>
