--- a/app/views/manage/appeals/search/filters-side/side.html
+++ b/app/views/manage/appeals/search/filters-side/side.html
@@ -399,7 +399,7 @@
                                   <a href="#" class="govuk-link">1345301</a>
                                 </h2>
                                 <div class="app-list__tag">
-                                    <strong class="govuk-tag govuk-tag--turquoise">Active</strong>
+                                    <strong class="govuk-tag govuk-tag--blue">Active</strong>
                                   </div>
                               </div>
                               
@@ -440,7 +440,7 @@
                                     <h2 class="govuk-heading-m govuk-!-margin-bottom-1">
                                       <a href="#" class="govuk-link">1345302</a>
                                     </h2>
-                                    <strong class="govuk-tag govuk-tag--blue">With PINs</strong>
+                                    <strong class="govuk-tag govuk-tag--yellow">With PINs</strong>
                                   </div>
                                   
                                     <dl class="govuk-summary-list govuk-summary-list--no-border govuk-summary-list--compact" >
@@ -500,7 +500,7 @@
                                     <h2 class="govuk-heading-m govuk-!-margin-bottom-1">
                                       <a href="#" class="govuk-link">1345304</a>
                                     </h2>
-                                    <strong class="govuk-tag govuk-tag--light-blue">Withdrawn</strong>
+                                    <strong class="govuk-tag govuk-tag--orange">Withdrawn</strong>
                                   </div>
                                   
                                     <dl class="govuk-summary-list govuk-summary-list--no-border govuk-summary-list--compact" >
